--- a/Bmsit-Mca/app/src/main/res/layout/activity_main.xml
+++ b/Bmsit-Mca/app/src/main/res/layout/activity_main.xml
@@ -24,22 +24,59 @@
         android:textSize="25dp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:text="Login" />
+        android:orientation="horizontal"
+        android:layout_marginTop="45dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp">
 
-    <Button
-        android:id="@+id/signup"
-        android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/bankingButton"
+            android:layout_width="10dp"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:text="🏧"
+            android:textSize="25sp"
+            android:layout_marginEnd="8dp"/>
+
+        <Button
+            android:id="@+id/governmentServicesButton"
+            android:layout_width="10dp"
+            android:layout_height="55dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:text="🏢"
+            android:textSize="25sp"
+            android:textColor="#8BC34A"
+            />
+
+        <Button
+            android:id="@+id/pensionServicesButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="25sp"
+            android:text="🗓"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:text="Register" />
+        android:gravity="center"
+        android:text="Legends"
+        android:textColor="#673AB7"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
+    <TextView
+        android:id="@+id/legend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="🏧:Banking\n🏢:Government Services\n🗓:Pension Services"
+        android:layout_marginTop="15dp"
+        android:textSize="25sp"/>
 
 
 </LinearLayout>
