--- a/Bmsit-Mca/app/src/main/res/layout/banking_activity.xml
+++ b/Bmsit-Mca/app/src/main/res/layout/banking_activity.xml
@@ -5,60 +5,66 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/hh"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="FinServ"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Account Number"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:text="Your Details"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
     <EditText
-        android:id="@+id/login_name"
+        android:id="@+id/senderAccountNumberEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter account number"
-        android:inputType="number" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Password"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:hint="Your Account Number"
+        android:maxLength="10"
+        android:inputType="number"/>
 
     <EditText
-        android:id="@+id/login_passwd"
+        android:id="@+id/senderIFSCCodeEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter password"
-        android:inputType="textPassword" />
+        android:hint="Your IFSC Code"
+        android:maxLength="11"
+        android:inputType="textCapCharacters"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Receiver's Details"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
+
+    <EditText
+        android:id="@+id/receiverAccountNumberEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Receiver's Account Number"
+        android:maxLength="10"
+        android:inputType="number"/>
+
+    <EditText
+        android:id="@+id/receiverIFSCCodeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Receiver's IFSC Code"
+        android:maxLength="11"
+        android:inputType="textCapCharacters"/>
+
+    <EditText
+        android:id="@+id/amountEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Amount to Send"
+        android:inputType="numberDecimal"/>
 
     <Button
-        android:id="@+id/login_login"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:text="Login" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="24dp"
+        android:text="Send Money"
+        android:id="@+id/sendMoneyButton"/>
 
 </LinearLayout>
