--- a/Bmsit-Mca/app/src/main/res/layout/government_layout.xml
+++ b/Bmsit-Mca/app/src/main/res/layout/government_layout.xml
@@ -15,106 +15,48 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Name"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:text="Select a Government Scheme:"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="match_parent"
+    <Spinner
+        android:id="@+id/schemeSpinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter Name"
-        android:inputType="text" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Account Number"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/accno"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter account number"
-        android:inputType="number" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Password"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/passwd"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter password"
-        android:inputType="textPassword" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Phone Number"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/phno"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter phone number"
-        android:inputType="number" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:text="Email"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Enter email"
-        android:inputType="textEmailAddress" />
+        android:layout_marginTop="8dp"/>
 
     <Button
-        android:id="@+id/signup"
-        android:layout_width="match_parent"
+        android:id="@+id/register"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="Register" />
+    <TextView
+        android:id="@+id/aadhar_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Enter aadhar number"
+        android:visibility="invisible"/>
+    <EditText
+        android:id="@+id/aadhar_value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:hint="aadhar number"
+        android:maxLength="10"
+        android:inputType="number"
+        android:visibility="invisible"
+        />
+    <Button
+        android:id="@+id/auth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Authenticate"
+        android:visibility="invisible"/>
 </LinearLayout>
