--- a/Bmsit-Mca/app/src/main/res/layout/pension_layout.xml
+++ b/Bmsit-Mca/app/src/main/res/layout/pension_layout.xml
@@ -13,4 +13,34 @@
         android:textSize="25dp"
         android:textStyle="bold" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pension Details"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
+
+    <EditText
+        android:id="@+id/pensionacdetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Your Account Number"
+        android:maxLength="10"
+        android:inputType="number"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Submit"
+        android:id="@+id/submitButton"/>
+
+    <TextView
+        android:id="@+id/status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        />
+
 </LinearLayout>
